fixed button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
    /* background-image: linear-gradient(to bottom, #051937, #523758, #945c6e, #c98d80, #edc79b); */
    background-size: cover;
    font-family: 'Xanh Mono', monospace;
+   font-weight: bold
  }
 
  h1{
@@ -14,7 +15,6 @@ body {
 h2{
     display: flex;
     justify-content: center;
-    font-size: smaller;
 }
 .cards {
    margin-top: -200px;
@@ -50,6 +50,19 @@ h3 {
 #buttons {
     display: flex;
     justify-content: center;
-    margin: 0 20px 10px 20px;
-    padding: 10px 20px 10px 40px;
+}
+
+#btn {
+    text-align: center;
+    margin: 0 40px 10px 40px;
+    padding: 10px 
+    
+}
+
+#shuffleBtn {
+    display: flex;
+    justify-content: center;
+    margin: 20px
+    padding:  10px;
+    
 }
